thermion_dart/lib/thermion_dart/compatibility/native/thermion_dart.g.dart


@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'grab_end', assetId: 'package:thermion_dart/thermion_dart.dart')
external void grab_end(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId,
            ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Float>, ffi.Int)>(
    symbol: 'apply_weights',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void apply_weights(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  ffi.Pointer<ffi.Char> entityName,
  ffi.Pointer<ffi.Float> weights,
  int count,
);

@ffi.Native<
        ffi.Bool Function(
            ffi.Pointer<ffi.Void>, EntityId, ffi.Pointer<ffi.Float>, ffi.Int)>(
    symbol: 'set_morph_target_weights',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external bool set_morph_target_weights(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  ffi.Pointer<ffi.Float> morphData,
  int numWeights,
);

@ffi.Native<
        ffi.Bool Function(
            ffi.Pointer<ffi.Void>,
            EntityId,
            ffi.Pointer<ffi.Float>,
            ffi.Pointer<ffi.Int>,
            ffi.Int,
            ffi.Int,
            ffi.Float)>(
    symbol: 'set_morph_animation',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external bool set_morph_animation(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  ffi.Pointer<ffi.Float> morphData,
  ffi.Pointer<ffi.Int> morphIndices,
  int numMorphTargets,
  int numFrames,
  double frameLengthInMs,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'reset_to_rest_pose',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void reset_to_rest_pose(
  ffi.Pointer<ffi.Void> sceneManager,
  int asset,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            EntityId,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Float>,
            ffi.Int,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float)>(
    symbol: 'add_bone_animation',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void add_bone_animation(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  int skinIndex,
  int boneIndex,
  ffi.Pointer<ffi.Float> frameData,
  int numFrames,
  double frameLengthInMs,
  double fadeOutInSecs,
  double fadeInInSecs,
  double maxDelta,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, EntityId, ffi.Pointer<ffi.Float>)>(
    symbol: 'get_local_transform',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void get_local_transform(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
  ffi.Pointer<ffi.Float> arg2,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Int,
            ffi.Pointer<ffi.Float>, ffi.Int)>(
    symbol: 'get_rest_local_transforms',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void get_rest_local_transforms(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
  int skinIndex,
  ffi.Pointer<ffi.Float> out,
  int numBones,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, EntityId, ffi.Pointer<ffi.Float>)>(
    symbol: 'get_world_transform',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void get_world_transform(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
  ffi.Pointer<ffi.Float> arg2,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Int, ffi.Int,
            ffi.Pointer<ffi.Float>)>(
    symbol: 'get_inverse_bind_matrix',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void get_inverse_bind_matrix(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
  int skinIndex,
  int boneIndex,
  ffi.Pointer<ffi.Float> arg4,
);

@ffi.Native<
        ffi.Bool Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Int, ffi.Int,
            ffi.Pointer<ffi.Float>)>(
    symbol: 'set_bone_transform',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external bool set_bone_transform(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  int skinIndex,
  int boneIndex,
  ffi.Pointer<ffi.Float> transform,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Int, ffi.Bool,
            ffi.Bool, ffi.Bool, ffi.Float)>(
    symbol: 'play_animation',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void play_animation(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  int index,
  bool loop,
  bool reverse,
  bool replaceActive,
  double crossfade,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Int, ffi.Int)>(
    symbol: 'set_animation_frame',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_animation_frame(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  int animationIndex,
  int animationFrame,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Int)>(
    symbol: 'stop_animation',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void stop_animation(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  int index,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'get_animation_count',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external int get_animation_count(
  ffi.Pointer<ffi.Void> sceneManager,
  int asset,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, EntityId, ffi.Pointer<ffi.Char>, ffi.Int)>(
    symbol: 'get_animation_name',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void get_animation_name(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  ffi.Pointer<ffi.Char> outPtr,
  int index,
);

@ffi.Native<ffi.Float Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Int)>(
    symbol: 'get_animation_duration',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external double get_animation_duration(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  int index,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Int)>(
    symbol: 'get_bone_count',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external int get_bone_count(
  ffi.Pointer<ffi.Void> sceneManager,
  int assetEntity,
  int skinIndex,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId,
            ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Int)>(
    symbol: 'get_bone_names',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void get_bone_names(
  ffi.Pointer<ffi.Void> sceneManager,
  int assetEntity,
  ffi.Pointer<ffi.Pointer<ffi.Char>> outPtr,
  int skinIndex,
);

@ffi.Native<
        EntityId Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Int, ffi.Int)>(
    symbol: 'get_bone', assetId: 'package:thermion_dart/thermion_dart.dart')
external int get_bone(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
  int skinIndex,
  int boneIndex,
);

@ffi.Native<
        ffi.Bool Function(
            ffi.Pointer<ffi.Void>, EntityId, ffi.Pointer<ffi.Float>)>(
    symbol: 'set_transform',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external bool set_transform(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
  ffi.Pointer<ffi.Float> transform,
);

@ffi.Native<ffi.Bool Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'update_bone_matrices',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external bool update_bone_matrices(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, EntityId,
            ffi.Pointer<ffi.Char>, ffi.Int)>(
    symbol: 'get_morph_target_name',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void get_morph_target_name(
  ffi.Pointer<ffi.Void> sceneManager,
  int assetEntity,
  int childEntity,
  ffi.Pointer<ffi.Char> outPtr,
  int index,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>, EntityId, EntityId)>(
    symbol: 'get_morph_target_name_count',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external int get_morph_target_name_count(
  ffi.Pointer<ffi.Void> sceneManager,
  int assetEntity,
  int childEntity,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'remove_entity',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void remove_entity(
  ffi.Pointer<ffi.Void> viewer,
  int asset,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'clear_entities',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void clear_entities(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<
        ffi.Bool Function(
            ffi.Pointer<ffi.Void>,
            EntityId,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float)>(
    symbol: 'set_material_color',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external bool set_material_color(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  ffi.Pointer<ffi.Char> meshName,
  int materialIndex,
  double r,
  double g,
  double b,
  double a,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'transform_to_unit_cube',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void transform_to_unit_cube(
  ffi.Pointer<ffi.Void> sceneManager,
  int asset,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Float, ffi.Float,
            ffi.Float, ffi.Bool)>(
    symbol: 'queue_position_update',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void queue_position_update(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  double x,
  double y,
  double z,
  bool relative,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Float, ffi.Float,
            ffi.Float, ffi.Float, ffi.Float, ffi.Bool)>(
    symbol: 'queue_rotation_update',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void queue_rotation_update(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  double rads,
  double x,
  double y,
  double z,
  double w,
  bool relative,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, EntityId, ffi.Float, ffi.Float, ffi.Float)>(
    symbol: 'set_position', assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_position(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  double x,
  double y,
  double z,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Float, ffi.Float,
            ffi.Float, ffi.Float, ffi.Float)>(
    symbol: 'set_rotation', assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_rotation(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  double rads,
  double x,
  double y,
  double z,
  double w,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Float)>(
    symbol: 'set_scale', assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_scale(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  double scale,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'move_camera_to_asset',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void move_camera_to_asset(
  ffi.Pointer<ffi.Void> viewer,
  int asset,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float, ffi.Float)>(
    symbol: 'set_camera_exposure',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_camera_exposure(
  ffi.Pointer<ffi.Void> viewer,
  double aperture,
  double shutterSpeed,
  double sensitivity,
);
